2006-09-25  Pavel Tsekov  <ptsekov@gmx.net>

	* layout.c (layout_do_change): Remove global variable.
	(layout_cmd): Reflect the changes above.
	(layout_change): Ditto.

2006-09-18  Pavel Tsekov  <ptsekov@gmx.net>

	* main.c (xtoolkit_panel_setup): Remove - it is a noop.
	(setup_panels_and_run_mc): Eliminate references to 
	`xtoolkit_panel_setup'.

2006-09-18  Pavel Tsekov  <ptsekov@gmx.net>

	* key.c (get_key_code): Do not blindly strip the eight bit of the
	key code when the 'use_8th_bit_as_meta' flag is set. Only key codes
	in the range 128 - 255 should be stripped, the rest must be left
	intact.

2006-09-14  Pavel Tsekov  <ptsekov@gmx.net>

	* wtools.c (fg_input_dialog_help) [ENABLE_NLS]: Translate the
	"Ok" and "Cancel" buttons here.
	Mark the QuickDialog as translated so that quick_dialog() won't
	try translate it again.

2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c: Sync with gnulib.
	All uses of HAVE_F_FSTYPENAME replaced by
	HAVE_STRUCT_STATFS_F_FSTYPENAME.
	[MOUNTED_GETMNTINFO2] Include sys/statvfs.h.
	(read_file_system_list) [MOUNTED_GETMNTINFO2]: Implement.

2006-09-07  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c: Revert a failed attempt to properly detect and use
	getmntinfo() returning its result in struct statvfs.

2006-08-12  Leonard den Ottolander  <leonard den ottolander nl>

	* key.c (check_selects): Get rid of the now redundant else.

2006-08-12  Leonard den Ottolander  <leonard den ottolander nl>

	* key.c (check_selects): Initialize retry to FALSE every time we enter
	the do/while loop (bug introduced when incorrectly rewriting the
	backward goto used by the original submitter).

2006-08-11  Mikulas Patocka  <mikulas@artax.karlin.mff.cuni.cz>

	* key.c (check_selects): Fix possible crash on reference to select list
	element removed in callback.

2006-08-09  Denis Vlasenko  <vda.linux@googlemail.com>

	* key.c: Make escape key timeout user configurable via the
	environment variable KEYBOARD_KEY_TIMEOUT_US (in microseconds).
